@startuml

title __INTRO-REFACTORING-D02's Class Diagram__\n

  namespace  {
    class ChildrenPrice {
    }
  }
  

  namespace  {
    class Customer {
    }
  }
  

  namespace  {
    class Movie {
    }
  }
  

  namespace  {
    class NewReleasePrice {
    }
  }
  

  namespace  {
    abstract class Price {
    }
  }
  

  namespace  {
    class RegularPrice {
    }
  }
  

  namespace  {
    class Rental {
    }
  }
  

  ChildrenPrice -up-|> Price
  Movie o-- Price : price
  NewReleasePrice -up-|> Price
  RegularPrice -up-|> Price
  Rental o-- Movie : movie


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
